fix header title/subtitle overflow

--- a/packages/core/src/components/content-header/content-header.scss
+++ b/packages/core/src/components/content-header/content-header.scss
@@ -17,6 +17,13 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 0;
+    min-width: 0;
+    white-space: nowrap;
+
+    .titleOverflow {
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
     .secondary {
       padding: 0.25rem 0;
